# mahjong-analyzer

./: .ghci  .gitignore  README.md  mahjong-analyzer.cabal
report/: LESSONLEARN.md
report/progress_1/: progress_1.tex
report/progress_2/: progress_2.tex
report/progress_3/: progress_3.tex
report/progress_4/: progress_4.tex
report/progress_5/: progress_5.tex
src/: AgariCheck.hs  FuCalculator.hs  Hand.hs  ScoreCalculator.hs  ShantenCalculate.hs  YakuCalculator.hs  hand.hs
test/: Generators.hs  Properties.hs  Spec.hs
