cabal-version: >=1.10
name:           mahjong-analyzer
version:        0.1.0.0
build-type:     Simple

library
  hs-source-dirs: src
  exposed-modules: 
      Hand,
      AgariCheck,
      ShantenCalculate,
      ScoreCalculator
  build-depends:
      base >=4.14 && <5,
      containers,
      extra,
      MemoTrie
  default-language: Haskell2010
